fixed sizes for images on mobile

--- a/_sass/pages/imagepost.sass
+++ b/_sass/pages/imagepost.sass
@@ -12,6 +12,9 @@
         display: flex
         flex-wrap: wrap
 
+        @media #{$below}
+            display: block
+
         img
             width: 100%
             height: auto
